homeassistant/deployment-esphome.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-esphome
spec:
  selector:
    matchLabels:
      app: homeassistant-esphome
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant-esphome
    spec:
      containers:
      - name: esphome
        image: ghcr.io/esphome/esphome:stable # Overridden
        ports:
        - containerPort: 6052
          name: http
        volumeMounts:
        - mountPath: /config
          name: homeassistant-esphome-config
        - mountPath: /cache
          name: homeassistant-esphome-cache
        resources:
          requests:
            memory: 1024Mi
          limits:
            memory: 2048Mi
      volumes:
      - name: homeassistant-esphome-cache
        emptyDir: {}
      - name: homeassistant-esphome-config
        persistentVolumeClaim:
          claimName: homeassistant-esphome-config
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: home.bramble/compute-class
                operator: In
                values:
                - "raspberry-pi-5"
