homeassistant/service-esphome.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-esphome
spec:
  selector:
    app: homeassistant-esphome
  ports:
  - protocol: TCP
    port: 6052
    targetPort: 6052
