homeassistant/service-homeassistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-matter-server
spec:
  selector:
    app: homeassistant-matter-server
  ports:
  - protocol: TCP
    port: 5580
    targetPort: 5580
