homeassistant/service-matter-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-homeassistant
spec:
  selector:
    app: homeassistant-homeassistant
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
