homeassistant/httproute-esphome.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-esphome
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: homeassistant
  hostnames:
  - esphome.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: homeassistant-esphome
      port: 6052
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
