homeassistant/httproute-homeassistant-local.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-homeassistant-local
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: homeassistant
  hostnames:
  - thuis.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: homeassistant-homeassistant
      port: 8123
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
