homeassistant/httproute-homeassistant.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-homeassistant
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: homeassistant
  hostnames:
  - thuis.bennaylor.dev
  rules:
  - matches:
    - headers:
      - name: Host
        type: Exact
        value: thuis.home
      path:
        type: PathPrefix
        value: /
    - headers:
      - name: Host
        type: Exact
        value: thuis.bennaylor.dev
      path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: homeassistant-homeassistant
      port: 8123
      weight: 1
